--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
       "react-router-dom": "^7.3.0",
-      "reactstrap": "^9.2.3"
+      "reactstrap": "^9.2.3",
+      "vite": "^6.0.5"
    },
    "devDependencies": {
       "@babel/preset-env": "^7.26.7",
